Maj des notebooks de dev

--- a/dev/03_phase_2_train.ipynb
+++ b/dev/03_phase_2_train.ipynb
@@ -27,12 +27,17 @@
     "\n",
     "## Prototype\n",
     "* Dataset : [Stanford Dogs Dataset](https://www.kaggle.com/jessicali9530/stanford-dogs-dataset)\n",
-    "* Méthode baseline : [Modèle Xception 2017 (en production)](https://github.com/Adrian1903/Classez-des-images-l-aide-d-algorithmes-de-Deep-Learning/blob/master/dev/04_cnn_transfer_learning.ipynb) \n",
+    "* Méthode baseline : [Modèle Xception 2017 (en production)](https://github.com/Adrian1903/Classez-des-images-l-aide-d-algorithmes-de-Deep-Learning/blob/master/dev/04_cnn_transfer_learning.ipynb), [Rapport de classification](https://github.com/Adrian1903/Classez-des-images-l-aide-d-algorithmes-de-Deep-Learning/blob/master/dev/05_classification_report.ipynb)\n",
     "* Méthode mise en oeuvre :\n",
     "  * Phase 1 : Intégration et mesure du détecteur d’objet en production\n",
-    "  * Phase 2 : Si résultat de la phase 1 insuffisant, apprentissage du modèle existant avec photos recadrées et mesure des résultats\n",
-    "\n",
-    "\n"
+    "  * Phase 2 : Si résultat de la phase 1 insuffisant, apprentissage du modèle existant avec photos recadrées et mesure des résultats"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Ce notebook entraine de nouveaux les modèles avec les photos nettoyées."
    ],
    "cell_type": "markdown",
    "metadata": {}
